# solana-ua-bootcamp-2024-08-06

./: .gitignore  package.json
practice-4/generate_keypair/: Cargo.toml
practice-4/generate_keypair/src/: main.rs
practice-4/keygen/: Cargo.toml
practice-4/keygen/src/: main.rs
practice-4/load-keypair/: Cargo.toml
practice-4/load-keypair/src/: main.rs
