[package]
name = "load-keypair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"         
solana-sdk = "1.11"      
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"       
bs58 = "0.4"